--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,11 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-        <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+        <p class="lead"> Welcome to my blog!
+
+          I'm currently enrolled in the integrated master's and doctoral program in Mathematics at Yonsei University. My academic journey is driven by a profound interest in mathematical biology, particularly in the realm of infectious disease epidemiology.
+          
+          In my research, I delve into the intricate dynamics of infectious diseases using a multi-faceted approach. Leveraging numerical analysis, Agent-Based Models (ABMs), machine learning, reinforcement learning, and deep neural networks, I explore the complex interplay between pathogens, hosts, and the environment.</a>.</p>
       </div>
     </div>
     <!-- /.row -->
