--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
+        <h2>About Me</h2>
         <p class="lead"> Welcome to my blog!
 
           I'm currently enrolled in the integrated master's and doctoral program in Mathematics at Yonsei University. My academic journey is driven by a profound interest in mathematical biology, particularly in the realm of infectious disease epidemiology.
