--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -7,8 +7,8 @@
 
   {% include navigation.html %}
   {% include header.html %}
-  {% include about.html %}
-  {% include services.html %}
+  {% include about me.html %}
+  {% include projects.html %}
   {% include callout.html %}
   {% include portfolio.html %}
   {% include call-to-action.html %}
