--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,6 @@
     <h1>Sol Kim</h1>
     <h3>School of Mathematics and Computing (Mathematics), Yonsei University</h3>
     <br>
-    <a href="#about" class="btn btn-dark btn-lg">About Me</a>
+    <a href="#about-me" class="btn btn-dark btn-lg">About Me</a>
   </div>
 </header>
