--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,10 +9,10 @@
       <a href="#top" onclick = $("#menu-close").click(); >Home</a>
     </li>
     <li>
-      <a href="#about" onclick = $("#menu-close").click(); >About</a>
+      <a href="#about me" onclick = $("#menu-close").click(); >About</a>
     </li>
     <li>
-      <a href="#services" onclick = $("#menu-close").click(); >Services</a>
+      <a href="#projects" onclick = $("#menu-close").click(); >Services</a>
     </li>
     <li>
       <a href="#portfolio" onclick = $("#menu-close").click(); >Portfolio</a>
