--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -7,7 +7,7 @@
 
   {% include navigation.html %}
   {% include header.html %}
-  {% include about me.html %}
+  {% include about-me.html %}
   {% include projects.html %}
   {% include callout.html %}
   {% include portfolio.html %}
